--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.3.0",
     "lucide-react": "^0.312.0",
-    "next": "14.0.4",
+    "next": "^14.1.1-canary.3",
     "next-auth": "^4.24.5",
     "nextjs-toploader": "^1.6.4",
     "react": "^18",
