--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ DATABASE_URL="mongodb+srv://ahmadnawfal2003:test@test-swapro.jx1mzqi.mongodb.net
 NEXTAUTH_SECRET=7XY+glJMWZ5W+dh98c+FTg
 GOOGLE_CLIENT_ID=205689040371-tp4ifeba15s38rje8p7htk84u0fqd5bu.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+NEXT_PUBLIC_API_URL=http://localhost:3000
